logs/ubi-reader.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ubi_reader-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/ubireader'...
Compiling './lib/python3.5/site-packages/ubireader/debug.py'...
***   File "./lib/python3.5/site-packages/ubireader/debug.py", line 26
    print obj.__name__, message
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ubireader/ubi'...
Listing './lib/python3.5/site-packages/ubireader/ubi/block'...
Compiling './lib/python3.5/site-packages/ubireader/ubi/block/__init__.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubi/block/__init__.py", line 125
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ubireader/ubi_io.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubi_io.py", line 58
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ubireader/ubifs'...
Compiling './lib/python3.5/site-packages/ubireader/ubifs/__init__.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubifs/__init__.py", line 59
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ubireader/ubifs/misc.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubifs/misc.py", line 65
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ubireader/ubifs/output.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubifs/output.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ubireader/ubifs/walk.py'...
***   File "./lib/python3.5/site-packages/ubireader/ubifs/walk.py", line 53
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
